--- a/index.html
+++ b/index.html
@@ -2,33 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <title>Todo App JavaScript | CodingNepal</title>
     <link rel="stylesheet" href="style.css">
-</head>
-    <title>Task-1:To-List</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
 <body>
-    <div class="wrapper">
-        <header> TO - DO </header>
-        <div class="inputfield">
-            <input type="text" placeholder="Add Your Task Here">
-            <button>+</button>
-        </div>
-        
-        <ul class="taskList"type=" ">
-            <li>Complete the assignments<span><i class="fas fa-trash"></i></span></li>
-            <li>Go to party <span><i class="fas fa-trash"></i></span></li>
-            <li>Buy a laptop<span><i class="fas fa-trash"></i></span></li>
-            <li>Participate in coding contest<span><i class="fas fa-trash"></i></span></li>
-            <li>Watch a Movie<span><i class="fas fa-trash"></i></span></li>
-            
-        </ul>
-        <div class ="footer">
-            <span>You have 5 pending tasks </span>
-            <button>Clear all</button>
-        </div>
+  <div class="wrapper">
+    <header>Todo App</header>
+    <div class="inputField">
+      <input type="text" placeholder="Add your new todo">
+      <button><i class="fas fa-plus"></i></button>
     </div>
+    <ul class="todoList">
+      <!-- data are comes from local storage -->
+    </ul>
+    <div class="footer">
+      <span>You have <span class="pendingTasks"></span> pending tasks</span>
+      <button>Clear All</button>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+
 </body>
 </html>
